<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/add_fav"
        android:title="@string/add_favorites"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="3"
        app:showAsAction="always"/>
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"/>


</menu>