<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main" />


            <TextView
                android:id="@+id/settingsText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#000000"
                android:textSize="40dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/backText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="Please select a background theme!"
                android:textColor="#000000"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="95dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/darkBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="#8e8e8e"
                    android:text="@string/darkTheme" />

                <Space
                    android:layout_width="35dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/dayBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"
                    android:text="@string/dayTheme"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="35dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/defaultTheme"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/defaultTheme"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/fontText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="Please select a text font!"
                android:textColor="#000000"
                android:textSize="30dp" />


                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:autofillHints="Select a font"
                    android:layout_gravity="center_horizontal"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/previewText"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#ff9500"
                    android:text="Preview Fonts"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/setText"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#ff9500"
                    android:layout_marginLeft="10dp"
                    android:text="Set Font"
                    android:textColor="#fff" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>